@@ -50,7 +50,11 @@ The latest version of Qucs can always be obtained from
 Known bugs are documented within the BUGS file.  Report bugs to
 <qucs-bugs@lists.sourceforge.net>.
 .SH COPYRIGHT
-Copyright \(co 2003, 2004, 2005 Stefan Jahn <stefan@lkcc.org>
+Copyright \(co 2003, 2004, 2005, 2006, 2007 Stefan Jahn <stefan@lkcc.org>
+.br
+Copyright \(co 2006 Helene Parruitte <parruit@enseirb.fr>
+.br
+Copyright \(co 2006 Bastien Roucaries <roucaries.bastien@gmail.com>
 .PP
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
@@ -63,5 +67,6 @@ documentation is also online available (as HTML) at
 <http://qucs.sourceforge.net/>.
 .SH AUTHORS
 Written by Michael Margraf <michael.margraf@alumni.tu-berlin.de>,
-Vincent Habchi, F5RCS <10.50@free.fr> and Stefan Jahn
-<stefan@lkcc.org>.
+Vincent Habchi, F5RCS <10.50@free.fr>, Helene Parruitte
+<parruit@enseirb.fr>, Bastien Roucaries <roucaries.bastien@gmail.com>
+and Stefan Jahn <stefan@lkcc.org>.
