@@ -1,3 +1,7 @@
+2007-01-30  Stefan Jahn  <stefan@lkcc.org>
+
+	* qucsator.1: Updated copyright notice.
+
 2006-05-01  Stefan Jahn  <stefan@lkcc.org>
 
 	* qucsconv.1: Documented the --correct (or -c) command line
